--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,7 +144,7 @@ h6 {
 --------------------------------------------------------------*/
 .header {
   color: var(--default-color);
-  background-color: var(--background-color);
+  background: linear-gradient(to right, #bfbfbf, #ffffff);
   padding: 15px 0;
   transition: all 0.5s;
   z-index: 997;
